# McGill-Care-Compass

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
data/: README.md
data/datasets/: actionable_service_records.csv  actionable_service_records.json  curated_service_records.csv  curated_service_records.json  guidance_review_queue.csv  guidance_review_queue.json  mcgill_useful_service_records.csv  mcgill_useful_service_records.json  montreal_healthcare_facilities.csv  montreal_healthcare_facilities.json  navigator_proposal_samples.csv  navigator_proposal_samples.json  navigator_service_candidates.csv  navigator_service_candidates.json  navigator_source_inventory.csv  navigator_source_inventory.json  navigator_source_manifest.csv  navigator_source_manifest.json  navigator_url_parse_samples.csv  navigator_url_parse_samples.json  quebec_guidance_catalogue.csv  quebec_guidance_catalogue.json  quebec_immigration_partners.csv  quebec_immigration_partners.json  source_manifest.csv  source_manifest.json
data/gold/: README.md
data/reports/: Additional-Source-Discovery-Inventory.md  Consolidated-Data-Investigation-Report.md  Proposal-Data-Feasibility-and-McGill-Proof.md  actionable_service_pipeline_report.md  curated_service_directory_quality_report.md  data_quality_report.md  mcgill_useful_content_assessment.md  (+2 more)
tests/: test_actionable_service_records.py  test_curated_service_records.py  test_guardrails.py  test_matching.py  test_rag_corpus_pipeline.py
(+55 files in other folders)
