[project]
name = "mcgill-care-compass"
version = "0.1.0"
description = "Source-grounded service navigator for newcomer students at McGill."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "streamlit>=1.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcgill_care_compass"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "scripts/data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
